--- a/src/app/pages/home/student-home/student-home.component.html
+++ b/src/app/pages/home/student-home/student-home.component.html
@@ -34,22 +34,40 @@
     <div class="wrap schedule-wrap" id="schedule">
       <h3 class="heading schedule__heading">Lịch thi hôm nay</h3>
       <table class="list schedule__list">
+        <thead>
         <tr class="list-heading">
           <th class="list-heading-item">Tên bài thi</th>
-          <th class="list-heading-item">Lớp</th>
+          <th class="list-heading-item">Mã bài thi</th>
           <th class="list-heading-item">Giờ bắt đầu</th>
         </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let exam of todayExams">
+          <td>{{ exam.name }}</td>
+          <td>{{ exam.code }}</td>
+          <td>{{ exam.startDate }}</td>
+        </tr>
+        </tbody>
       </table>
     </div>
 
     <div class="wrap unfished-exam__wrap" id="unfished-exam">
       <h3 class="heading unfished-exam__heading">Bài thi chưa làm</h3>
       <table class="list unfished-exam_list">
-        <tr class="list-heading">
-          <th class="list-heading-item">Tên bài thi</th>
-          <th class="list-heading-item">Lớp</th>
-          <th class="list-heading-item">Giờ kết thúc</th>
-        </tr>
+        <thead>
+          <tr class="list-heading">
+            <th class="list-heading-item">Tên bài thi</th>
+            <th class="list-heading-item">Mã bài thi</th>
+            <th class="list-heading-item">Giờ kết thúc</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let exam of unfinishedExams">
+            <td>{{ exam.name }}</td>
+            <td>{{ exam.code }}</td>
+            <td>{{ exam.endDate }}</td>
+          </tr>
+        </tbody>
       </table>
     </div>
 
